--- a/css/about.css
+++ b/css/about.css
@@ -1,7 +1,7 @@
 .version.about /* version checker */
 {
-	color: #000005;
-	background-color: #8F51C7;
+	color: #000012;
+	background-color: #7542B3;
 }
 
 #muse_css_mq
@@ -365,7 +365,7 @@
 	color: #000000;
 	position: relative;
 	margin-right: -10000px;
-	margin-top: 262px;
+	margin-top: 261px;
 	left: 80px;
 }
 
@@ -376,7 +376,7 @@
 	padding-bottom: 1px;
 	min-height: 11px;
 	width: 110px;
-	margin: 262px -10000px 0px 0px;
+	margin: 261px -10000px 0px 0px;
 }
 
 #u24545-4:active
@@ -386,7 +386,7 @@
 	padding-bottom: 1px;
 	min-height: 11px;
 	width: 110px;
-	margin: 262px -10000px 0px 0px;
+	margin: 261px -10000px 0px 0px;
 }
 
 #u24545-4:hover p,#u24545-4:hover span,#u24545-4:active p,#u24545-4:active span
@@ -409,7 +409,7 @@
 	color: #000000;
 	position: relative;
 	margin-right: -10000px;
-	margin-top: 578px;
+	margin-top: 576px;
 	left: 214px;
 }
 
@@ -420,7 +420,7 @@
 	padding-bottom: 1px;
 	min-height: 11px;
 	width: 65px;
-	margin: 578px -10000px 0px 0px;
+	margin: 576px -10000px 0px 0px;
 }
 
 #u24560-4:active
@@ -430,7 +430,7 @@
 	padding-bottom: 1px;
 	min-height: 11px;
 	width: 65px;
-	margin: 578px -10000px 0px 0px;
+	margin: 576px -10000px 0px 0px;
 }
 
 #u24560-4:hover p,#u24560-4:hover span,#u24560-4:active p,#u24560-4:active span
@@ -453,7 +453,7 @@
 	color: #000000;
 	position: relative;
 	margin-right: -10000px;
-	margin-top: 558px;
+	margin-top: 555px;
 	left: 182px;
 }
 
@@ -464,7 +464,7 @@
 	padding-bottom: 1px;
 	min-height: 11px;
 	width: 112px;
-	margin: 558px -10000px 0px 0px;
+	margin: 555px -10000px 0px 0px;
 }
 
 #u24566-4:active
@@ -474,7 +474,7 @@
 	padding-bottom: 1px;
 	min-height: 11px;
 	width: 112px;
-	margin: 558px -10000px 0px 0px;
+	margin: 555px -10000px 0px 0px;
 }
 
 #u24566-4:hover p,#u24566-4:hover span,#u24566-4:active p,#u24566-4:active span
