--- a/css/iefonts_comingsoon.css
+++ b/css/iefonts_comingsoon.css
@@ -1,1 +1,1 @@
-.Character-Style{font-family:muli-n3, sans-serif;}#u12715-3,#u12715-4{font-family:quicksand-i4, sans-serif;}#u2734,#u12715,#u12715-6,#u12715-7,#u12715-9,#u12715-10{font-family:quicksand-n4, sans-serif;}
+.Project{font-family:quicksand-n4, sans-serif;}.Character-Style{font-family:muli-n3, sans-serif;}#u12715-3,#u12715-4{font-family:quicksand-i4, sans-serif;}#u2734,#u12715,#u12715-6,#u12715-7,#u12715-9,#u12715-10{font-family:quicksand-n4, sans-serif;}
